Update display tempreature

--- a/views/home.jade
+++ b/views/home.jade
@@ -264,7 +264,7 @@ html(lang='en')
       #navbarCollapse.collapse.navbar-collapse.justify-content-start
         ul.nav.navbar-nav
           li.nav-item
-            a.nav-link(href='/users') Viewer
+            a.nav-link(href='/display') Viewer
           li.nav-item
             a.nav-link(href='#') Control Device
           li.nav-item.active
