--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -1,4 +1,4 @@
-body{
+/* body{
     min-height: 100vh;
     display: flex;
     align-items: center;
@@ -6,72 +6,85 @@ body{
     background-color: rgba(238, 237, 237, 0.33);
     color: rgb(105, 104, 104);
     font-family: sans-serif;
-}
-.container{
+} */
+
+.container {
     height: 80vh;
-    background-color: #ffffff;
+    background-color: rgba(238, 237, 237, 0.33);
     border-color: #ffffff;
     align-items: center;
     border-radius: 1rem;
     vertical-align: middle;
+    justify-content: center;
+    display: flex;
+    min-height: 100vh;
 }
-@media(max-width:767px)
-{
-    .container{
+
+@media(max-width:767px) {
+    .container {
         height: fit-content;
     }
 }
-.weather
-{
+
+.weather {
     width: 77%;
 }
-@media(max-width:767px){
-    .weather
-    {
+
+@media(max-width:767px) {
+    .weather {
         width: 100%;
-    }   
+    }
 }
-.card{
+
+.card {
     padding: 1rem;
     margin: 1.5rem 4vw;
     border-radius: 1rem;
-    background-color: rgba(238, 237, 237, 0.22);
-    border-color: rgba(238, 237, 237, 0.22);
+    background-color: rgba(99, 96, 96, 0.22);
+    border-color: rgba(160, 157, 157, 0.22);
     box-shadow: 5px 6px 6px 2px #e9ecef;
     text-align: center;
 }
-@media(max-width:768px){
-    .card{
+
+@media(max-width:768px) {
+    .card {
         margin: 1.5rem;
     }
 }
-.title{
+
+.title {
     justify-content: center;
     position: absolute;
     left: 50%;
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%)
 }
-.title p{
+
+.title p {
     margin-bottom: 0.2rem;
     font-size: 1.2rem;
 }
-.temp{
+
+.temp {
     font-size: 2.6rem;
     margin-bottom: 1rem;
 }
-.header{
+
+.header {
     color: #dddddd;
 }
-.col-4{
+
+.col-4 {
     padding: 0 0.2rem;
 }
-.icon{
+
+.icon {
     align-self: flex-end;
     margin-right: -2.5rem;
     margin-top: -2rem;
     z-index: 999;
 }
-.icon img{
+
+.icon img {
     width: 5rem;
 }
