Update base code

--- a/public/stylesheets/tab-bar.css
+++ b/public/stylesheets/tab-bar.css
@@ -3,9 +3,10 @@ body {
     font-family: 'Varela Round', sans-serif;
 }
 
-.container {
+
+/* .container {
     position: relative;
-}
+} */
 
 .form-control {
     box-shadow: none;
