--- a/views/Control/control.jade
+++ b/views/Control/control.jade
@@ -2,58 +2,54 @@ doctype html
 html(lang='en')
   head
     include ../header.jade
-    link(rel='stylesheet', href='/stylesheets/style2.css')
+    link(rel='stylesheet' href='../../public/stylesheets/style2.css')
+    script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js')
+    link(href='https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css' rel='stylesheet')
+    script(src='https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js')
+    link(rel='stylesheet' href='/stylesheets/style2.css')
   body
     include ../navbar.jade
     .container.d-flex.justify-content-center
-        .weather
-            .row
-                .col-md-6
-                    .card
-                        span.icon
-                            img.img-fluid(src='https://img.icons8.com/emoji/96/000000/sun-emoji.png')
-                        |               
-                        .title
-                            p Nhi&#x1EC7;t &dstrok;&#x1ED9;
-                        |               
-                        .temp
-                            | +20 
-                            sup &deg;
-                            | C
-                |           
-                .col-md-6
-                    .card
-                        span.icon
-                            img.img-fluid(src='images/ph.png')
-                        |               
-                        .title
-                            p &Dstrok;&#x1ED9; pH
-                        |               
-                        .temp
-                            | 18
-                            sup &deg;
-                |         
-            .row
-                .col-md-6
-                    .card
-                        span.icon
-                            img(src='/images/oxi.png')
-                        |               
-                        .title
-                            p &Dstrok;&#x1ED9; oxi h&ograve;a tan
-                        |               
-                        .temp
-                            | 17
-                            sup &deg;
-                |           
-                .col-md-6
-                    .card
-                        span.icon
-                            img(src='/images/opaque.png')
-                        |               
-                        .title
-                            p &Dstrok;&#x1ED9; &dstrok;&#x1EE5;c
-                        |               
-                        .temp
-                            | +15
-                            sup &deg;
+      table.table.table-striped-columns
+        thead
+          tr.table-primary
+            th(colspan='4' style='margin: 50px; ;text-align: center; font-size:xx-large; color: rgb(255, 152, 33);')   Điều khiển thiết bị  
+        tbody.table-group-divider
+          tr
+            td Thiết bị 1
+            td
+              input#ctl_device1(type='checkbox' checked='false' data-toggle='toggle' data-width='100')
+            td Trạng thái thiết bị 1
+            td
+              img.img-fluid(src='/images/led1.png' alt="Image Title")
+          tr
+            td Thiết bị 2
+            td
+              input#ctl_device2(type='checkbox' checked='false' data-toggle='toggle' data-width='100')
+            td Trạng thái thiết bị 2
+            td
+              img.img-fluid(src='/images/led2.png' alt="Image Title")
+          tr
+            td Điều khiển tự động
+            td
+              input#ctl_device3(type='checkbox' checked='false' data-toggle='toggle' data-width='100' onchange='checkAutoClick(this)')
+            td Trạng thái Auto
+            td
+              img.img-fluid(src='/images/led1.png' alt="Image Title")
+    script.
+      var device1 = document.getElementById("ctl_device1");
+      var device2 = document.getElementById("ctl_device2");
+      var auto = document.getElementById("ctl_device3");
+      function checkAutoClick(auto) {
+        console.log("Check box change: ",auto.checked);
+        console.log('Device 1: ', device1.checked)
+        if(device1.checked == true) {
+            device1.bootstrapToggle('Off');
+            device1.checked = false;
+        } else {
+            device1.bootstrapToggle('On');
+            device1.checked = true;
+        }
+
+      }
