--- a/views/Display/temperature.jade
+++ b/views/Display/temperature.jade
@@ -1,23 +1,25 @@
 doctype html
 html(lang='en')
   head
-    meta(charset='UTF-8')
-    |     
-    meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    |     
-    meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    |     
-    link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css')
-    |     
-    script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js')
-    |     
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js')
-    |     
-    link(rel='stylesheet', href='/stylesheets/style2.css')
-    |     
-    title Display Information
-  |   
+    //- meta(charset='UTF-8')
+    //- |     
+    //- meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    //- |     
+    //- meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    //- |     
+    //- link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css')
+    //- |     
+    //- script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js')
+    //- |     
+    //- script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js')
+    //- |     
+    //- link(rel='stylesheet', href='/stylesheets/style2.css')
+    //- |     
+    //- title Display Information
+    include ../header.jade
+    link(rel='stylesheet', href='/stylesheets/style2.css')   
   body
+    include ../navbar.jade
     .container.d-flex.justify-content-center
       .weather
         .row
