Update code js when click event

--- a/views/Display/control.jade
+++ b/views/Display/control.jade
@@ -46,3 +46,12 @@ html(lang='en')
       document.getElementById('ctl_device1').onclick = ()=>{
         
       }
+
+      $(document).ready(function () {
+            $('#critical_btn').on('change', function () {
+                console.log("Hello");
+            });
+
+            
+        });
+      
