--- a/views/Chart/chart.hbs
+++ b/views/Chart/chart.hbs
@@ -3,9 +3,92 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/stylesheets/tab-bar.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <title>Chart</title>
 </head>
 <body>
-    
+    <div class="container">
+        {{>header}}
+        <div style="width:1000px;height:500px">
+            <canvas id="firstChart" width="400" height="400"></canvas>
+        </div>
+        <div style="width:1000px;height:500px">
+            <canvas id="secondChart" width="400" height="400"></canvas>
+        </div>
+        <script>
+            var ctx = document.getElementById('firstChart').getContext('2d');
+            var firstChart = new Chart(ctx,{
+                type:'bar',
+                data:{
+                    labels:["January", "February", "March", "April", "May", "June", "July"],
+                    datasets:[{
+                        label:"Test chart",
+                        data:[12, 19, 3, 5, 2, 3],
+                        backgroundColor:[
+                            'rgba(255, 99, 132, 0.2)',
+                            'rgba(54, 162, 235, 0.2)',
+                            'rgba(255, 206, 86, 0.2)',
+                            'rgba(75, 192, 192, 0.2)',
+                            'rgba(153, 102, 255, 0.2)',
+                            'rgba(255, 159, 64, 0.2)'
+                        ],
+                        borderColor:[
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(54, 162, 235, 1)',
+                            'rgba(255, 206, 86, 1)',
+                            'rgba(75, 192, 192, 1)',
+                            'rgba(153, 102, 255, 1)',
+                            'rgba(255, 159, 64, 1)'
+                        ],
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    aspectRatio:4
+                }
+            })
+
+        var ctx_2 = document.getElementById('secondChart').getContext('2d');
+        var secondChart = new Chart(ctx_2,{
+            type:'line',
+                data:{
+                    labels:["January", "February", "March", "April", "May", "June", "July"],
+                    datasets:[{
+                        label:"Test chart",
+                        data:[12, 19, 3, 5, 2, 3],
+                        backgroundColor:[
+                            'rgba(255, 99, 132, 0.2)',
+                            'rgba(54, 162, 235, 0.2)',
+                            'rgba(255, 206, 86, 0.2)',
+                            'rgba(75, 192, 192, 0.2)',
+                            'rgba(153, 102, 255, 0.2)',
+                            'rgba(255, 159, 64, 0.2)'
+                        ],
+                        borderColor:[
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(54, 162, 235, 1)',
+                            'rgba(255, 206, 86, 1)',
+                            'rgba(75, 192, 192, 1)',
+                            'rgba(153, 102, 255, 1)',
+                            'rgba(255, 159, 64, 1)'
+                        ],
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    aspectRatio:4
+                }
+            })
+        </script>
+    </div>
 </body>
 </html>
