--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -1,90 +1,95 @@
-/* body {
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgba(238, 237, 237, 0.33);
-    color: rgb(105, 104, 104);
-    font-family: sans-serif;
-} */
-
-.container {
-    height: 80vh;
-    background-color: rgba(238, 237, 237, 0.33);
-    border-color: #ffffff;
-    align-items: center;
-    border-radius: 1rem;
-    vertical-align: middle;
-    justify-content: center;
-    display: flex;
-    min-height: 100vh;
+html {
+  font-family: 'Roboto Slab', sans-serif;
 }
 
-@media(max-width:767px) {
-    .container {
-        height: fit-content;
-    }
+body {
+  color: #313E48;
 }
 
-.weather {
-    width: 77%;
+img {
+  max-width: 100%;
 }
 
-@media(max-width:767px) {
-    .weather {
-        width: 100%;
-    }
+.box {
+  margin: 1em auto;
+  background: #f0f0f0;
+  padding: 2em 0;
+  width: 300px;
+  border-radius: 3px;
+  box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.25);
+}
+.box:hover {
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.5);
+}
+.box h1 {
+  font-size: 2em;
+  text-align: center;
+}
+.box .temp {
+  font-size: 5em;
+  line-height: 1;
+  text-align: center;
+  display: block;
+  padding-left: 30px;
+  margin-bottom: 24px;
+}
+.box .high-low {
+  font-size: 2em;
+  color: #5a7285;
+  text-align: center;
+  display: block;
+  font-weight: 100;
 }
 
-.card {
-    padding: 1rem;
-    margin: 1.5rem 4vw;
-    border-radius: 1rem;
-    background-color: rgba(99, 96, 96, 0.22);
-    border-color: rgba(160, 157, 157, 0.22);
-    box-shadow: 5px 6px 6px 2px #e9ecef;
-    text-align: center;
+.weather .icon {
+  position: relative;
+  margin: 0 auto;
 }
 
-@media(max-width:768px) {
-    .card {
-        margin: 1.5rem;
-    }
+.spin {
+  position: absolute;
+  top: 16px;
+  right: 18px;
+  text-align: center;
+  width: 65px;
 }
 
-.title {
-    justify-content: center;
-    position: absolute;
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-    transform: translateX(-50%)
+.bubble.black {
+  background-color: #fcfcfc;
+  position: relative;
+  width: 100px;
+  height: 100px;
+  padding: 0px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  border-radius: 50px;
 }
 
-.title p {
-    margin-bottom: 0.2rem;
-    font-size: 1.2rem;
+.bubble.black:after {
+  content: "";
+  position: absolute;
+  bottom: -14px;
+  left: 14px;
+  border-style: solid;
+  border-width: 29px 15px 0;
+  border-color: #fcfcfc transparent;
+  display: block;
+  width: 0;
+  z-index: 1;
+  transform: rotate(30deg);
 }
 
-.temp {
-    font-size: 2.6rem;
-    margin-bottom: 1rem;
+.spin img {
+  animation: spin 5s linear infinite;
+  animation-play-state: paused;
 }
 
-.header {
-    color: #dddddd;
+.box:hover .spin img {
+  animation-play-state: running;
 }
 
-.col-4 {
-    padding: 0 0.2rem;
-}
-
-.icon {
-    align-self: flex-end;
-    margin-right: -2.5rem;
-    margin-top: -2rem;
-    z-index: 999;
-}
-
-.icon img {
-    width: 5rem;
+@keyframes spin {
+  100% {
+    transform: rotate(1turn);
+  }
 }
