--- a/views/Display/temperature.hbs
+++ b/views/Display/temperature.hbs
@@ -13,6 +13,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'><link rel="stylesheet" href="./style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
     <link rel="stylesheet" href="stylesheets/style2.css">
+    <title>Viewer</title>
 </head>
 <body>
    
