--- a/views/Setting/settingTime.hbs
+++ b/views/Setting/settingTime.hbs
@@ -28,8 +28,12 @@
       </thead>
       <tbody class="table-group-divider">
         <tr>
-          <td>Thiết bị 1</td>
           <td>
+            <br>
+            <h4>Thiết bị 1</h4>
+            </td>
+          <td>
+            <br>
             <input type="checkbox" checked="" data-toggle="toggle" data-width="100">
           </td>
           <td>Thời gian bật<br>
@@ -48,8 +52,12 @@
           </td>
         </tr>
         <tr>
-          <td>Thiết bị 2</td>
           <td>
+            <br>
+            <h4>Thiết bị 2</h4>
+            </td>
+          <td>
+            <br>
             <input type="checkbox" checked="" data-toggle="toggle" data-width="100">
           </td>
           <td>Thời gian bật<br>
@@ -68,8 +76,84 @@
           </td>
         </tr>
         <tr>
-          <td>Điều khiển tự động</td>
+         <td>
+            <br>
+            <h4>Thiết bị 3</h4>
+            </td>
           <td>
+            <br>
+            <input type="checkbox" checked="" data-toggle="toggle" data-width="100">
+          </td>
+          <td>Thời gian bật<br>
+            <div class="form-group">
+              <div class="input-group date" id="datetimepicker2_on">
+                <input class="form-control" type="text"><span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+              </div>
+            </div>
+          </td>
+          <td>Thời gian tắt<br>
+            <div class="form-group">
+              <div class="input-group date" id="datetimepicker2_off">
+                <input class="form-control" type="text"><span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+              </div>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <br>
+            <h4>Thiết bị 4</h4>
+            </td>
+          <td>
+            <br>
+            <input type="checkbox" checked="" data-toggle="toggle" data-width="100">
+          </td>
+          <td>Thời gian bật<br>
+            <div class="form-group">
+              <div class="input-group date" id="datetimepicker2_on">
+                <input class="form-control" type="text"><span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+              </div>
+            </div>
+          </td>
+          <td>Thời gian tắt<br>
+            <div class="form-group">
+              <div class="input-group date" id="datetimepicker2_off">
+                <input class="form-control" type="text"><span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+              </div>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <br>
+            <h4>Thiết bị 5</h4>
+            </td>
+          <td>
+            <br>
+            <input type="checkbox" checked="" data-toggle="toggle" data-width="100">
+          </td>
+          <td>Thời gian bật<br>
+            <div class="form-group">
+              <div class="input-group date" id="datetimepicker2_on">
+                <input class="form-control" type="text"><span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+              </div>
+            </div>
+          </td>
+          <td>Thời gian tắt<br>
+            <div class="form-group">
+              <div class="input-group date" id="datetimepicker2_off">
+                <input class="form-control" type="text"><span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+              </div>
+            </div>
+          </td>
+        </tr>
+        <tr>
+         <td>
+            <br>
+            <h4>Điều Khiển Tự Động</h4>
+            </td>
+          <td>
+            <br>
             <input type="checkbox" checked="" data-toggle="toggle" data-width="100">
           </td>
           <td>Thời gian bật<br>
