Update setting time + control

--- a/views/Setting/settingTime.hbs
+++ b/views/Setting/settingTime.hbs
@@ -2,19 +2,27 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/stylesheets/tab-bar.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
-    <title>Setting Time</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="/stylesheets/tab-bar.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css"
+    rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.1/moment.min.js"></script>
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.43/css/bootstrap-datetimepicker.min.css" />
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.43/css/bootstrap-datetimepicker-standalone.css" />
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.43/js/bootstrap-datetimepicker.min.js"></script>
+  <title>Setting Time</title>
 </head>
 
 <body>
@@ -23,15 +31,15 @@
     <table class="table table-striped-columns">
       <thead>
         <tr class="table-primary">
-          <th colspan="4" style="margin: 50px; ;text-align: center; font-size:xx-large; color: rgb(255, 152, 33);"> Điều khiển thiết bị </th>
+          <th colspan="4" style="margin: 50px; ;text-align: center; font-size:xx-large; color: rgb(255, 152, 33);"> Hẹn giờ thiết bị </th>
         </tr>
       </thead>
       <tbody class="table-group-divider">
         <tr>
           <td>
             <br>
-            <h4>Thiết bị 1</h4>
-            </td>
+            <h4>Máy Bơm</h4>
+          </td>
           <td>
             <br>
             <input type="checkbox" checked="" data-toggle="toggle" data-width="100">
@@ -39,23 +47,31 @@
           <td>Thời gian bật<br>
             <div class="form-group">
               <div class="input-group date" id="datetimepicker1_on">
-                <input class="form-control" type="text"><span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+                <input class="form-control" id="bom_startTime" type="text">
+                <span class="input-group-addon">
+                  <span class="glyphicon glyphicon-calendar"></span>
+                </span>
               </div>
             </div>
           </td>
           <td>Thời gian tắt<br>
             <div class="form-group">
               <div class="input-group date" id="datetimepicker1_off">
-                <input class="form-control" type="text"><span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+                <input class="form-control" type="text" id="bom_stopTime"><span class="input-group-addon"><span
+                    class="glyphicon glyphicon-calendar"></span></span>
               </div>
             </div>
+          </td>
+          <td>
+            <br>
+            <button type="button" class="btn btn-primary" onclick="settingTime(1)">Set</button>
           </td>
         </tr>
         <tr>
           <td>
             <br>
             <h4>Thiết bị 2</h4>
-            </td>
+          </td>
           <td>
             <br>
             <input type="checkbox" checked="" data-toggle="toggle" data-width="100">
@@ -63,23 +79,25 @@
           <td>Thời gian bật<br>
             <div class="form-group">
               <div class="input-group date" id="datetimepicker2_on">
-                <input class="form-control" type="text"><span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+                <input class="form-control" type="text"><span class="input-group-addon"><span
+                    class="glyphicon glyphicon-calendar"></span></span>
               </div>
             </div>
           </td>
           <td>Thời gian tắt<br>
             <div class="form-group">
               <div class="input-group date" id="datetimepicker2_off">
-                <input class="form-control" type="text"><span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+                <input class="form-control" type="text"><span class="input-group-addon"><span
+                    class="glyphicon glyphicon-calendar"></span></span>
               </div>
             </div>
           </td>
         </tr>
         <tr>
-         <td>
+          <td>
             <br>
             <h4>Thiết bị 3</h4>
-            </td>
+          </td>
           <td>
             <br>
             <input type="checkbox" checked="" data-toggle="toggle" data-width="100">
@@ -87,14 +105,16 @@
           <td>Thời gian bật<br>
             <div class="form-group">
               <div class="input-group date" id="datetimepicker2_on">
-                <input class="form-control" type="text"><span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+                <input class="form-control" type="text"><span class="input-group-addon"><span
+                    class="glyphicon glyphicon-calendar"></span></span>
               </div>
             </div>
           </td>
           <td>Thời gian tắt<br>
             <div class="form-group">
               <div class="input-group date" id="datetimepicker2_off">
-                <input class="form-control" type="text"><span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+                <input class="form-control" type="text"><span class="input-group-addon"><span
+                    class="glyphicon glyphicon-calendar"></span></span>
               </div>
             </div>
           </td>
@@ -103,7 +123,7 @@
           <td>
             <br>
             <h4>Thiết bị 4</h4>
-            </td>
+          </td>
           <td>
             <br>
             <input type="checkbox" checked="" data-toggle="toggle" data-width="100">
@@ -111,14 +131,16 @@
           <td>Thời gian bật<br>
             <div class="form-group">
               <div class="input-group date" id="datetimepicker2_on">
-                <input class="form-control" type="text"><span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+                <input class="form-control" type="text"><span class="input-group-addon"><span
+                    class="glyphicon glyphicon-calendar"></span></span>
               </div>
             </div>
           </td>
           <td>Thời gian tắt<br>
             <div class="form-group">
               <div class="input-group date" id="datetimepicker2_off">
-                <input class="form-control" type="text"><span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+                <input class="form-control" type="text"><span class="input-group-addon"><span
+                    class="glyphicon glyphicon-calendar"></span></span>
               </div>
             </div>
           </td>
@@ -127,7 +149,7 @@
           <td>
             <br>
             <h4>Thiết bị 5</h4>
-            </td>
+          </td>
           <td>
             <br>
             <input type="checkbox" checked="" data-toggle="toggle" data-width="100">
@@ -135,23 +157,25 @@
           <td>Thời gian bật<br>
             <div class="form-group">
               <div class="input-group date" id="datetimepicker2_on">
-                <input class="form-control" type="text"><span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+                <input class="form-control" type="text"><span class="input-group-addon"><span
+                    class="glyphicon glyphicon-calendar"></span></span>
               </div>
             </div>
           </td>
           <td>Thời gian tắt<br>
             <div class="form-group">
               <div class="input-group date" id="datetimepicker2_off">
-                <input class="form-control" type="text"><span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+                <input class="form-control" type="text"><span class="input-group-addon"><span
+                    class="glyphicon glyphicon-calendar"></span></span>
               </div>
             </div>
           </td>
         </tr>
         <tr>
-         <td>
+          <td>
             <br>
             <h4>Điều Khiển Tự Động</h4>
-            </td>
+          </td>
           <td>
             <br>
             <input type="checkbox" checked="" data-toggle="toggle" data-width="100">
@@ -159,14 +183,16 @@
           <td>Thời gian bật<br>
             <div class="form-group">
               <div class="input-group date" id="datetimepickerAuto_on">
-                <input class="form-control" type="text"><span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+                <input class="form-control" type="text"><span class="input-group-addon"><span
+                    class="glyphicon glyphicon-calendar"></span></span>
               </div>
             </div>
           </td>
           <td>Thời gian tắt<br>
             <div class="form-group">
               <div class="input-group date" id="datetimepickerAuto_off">
-                <input class="form-control" type="text"><span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+                <input class="form-control" type="text"><span class="input-group-addon"><span
+                    class="glyphicon glyphicon-calendar"></span></span>
               </div>
             </div>
           </td>
@@ -175,24 +201,34 @@
     </table>
   </div>
   <script>
-    $(function() {
+    $(function () {
       $('#datetimepicker1_on').datetimepicker();
     });
-    $(function() {
+    $(function () {
       $('#datetimepicker1_off').datetimepicker();
     });
-    $(function() {
+    $(function () {
       $('#datetimepicker2_on').datetimepicker();
     });
-    $(function() {
+    $(function () {
       $('#datetimepicker2_off').datetimepicker();
     });
-    $(function() {
+    $(function () {
       $('#datetimepickerAuto_on').datetimepicker();
     });
-    $(function() {
+    $(function () {
       $('#datetimepickerAuto_off').datetimepicker();
     });
+
+
+    let _bom_startTime = document.getElementById('bom_startTime');
+    let _bom_stopTime = document.getElementById('bom_stopTime')
+    function settingTime(id){
+      if(id == 1){
+        console.log('Start time: ',_bom_startTime.value);
+        console.log('Stop time: ',_bom_stopTime.value);
+      }
+    }
   </script>
 </body>
 
